Corrected the z-index of profile pic, to enable nav bar

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -14,6 +14,7 @@
       width: 275px;
       height: 275px;
       margin: 0 auto 2rem;
+      z-index: -1;
     }
   }
   
@@ -55,6 +56,7 @@
       width: 275px;
       height: 275px;
       margin: 0 auto 2rem;
+      z-index: -1;
     }
   }
   
@@ -115,6 +117,7 @@
       width: auto;
       height: 46vw;
       justify-content: center;
+      z-index: -1;
     }
     .section__text{
         margin-top: 15px;
